# SEDSnet_cpp

./: CMakeLists.txt  README.md  build.py  sedsprintf.h  vcpkg.json
C-Headers/: sedsnet.h
Cpp-Headers/: config.hpp  internal.hpp  packet.hpp
c-wrapper/: sedsnet_c_wrapper.c  sedsnet_c_wrapper.h  sedsnet_cpp_wrapper.hpp
docs/: examples.md  overview.md  upstream_feature_parity_plan.md  upstream_parity_notes.md
examples/: README.md  managed_variables_e2e_example.c  routing_example.c  runtime_config_example.c  timesync_example.c
scripts/: generate_schema.py
src/: core.cpp  discovery.cpp  packet.cpp  packet_api.cpp  queue.cpp  relay_api.cpp  router_api.cpp  router_core.cpp  serialize.cpp  timesync.cpp  upstream_api_compat.cpp
tests/: c_wrapper_api_test.c  check_codegen.py  runtime_env_schema_test.c  rust_interop.py  rust_interop_cpp_peer.cpp  test_cpp_wrappers.cpp  tests.cpp  upstream_api_parity_test.c
tests/schemas/: runtime_env_base.json  runtime_env_ipc.json
